--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,9 @@
     animation-play-state: paused;
   }
 
+  /* bg-background/20 border border-accent/30   shadow-glass-inset  */
   .custom-bg {
-    @apply bg-background/20 border border-accent/30 border-solid backdrop-blur-[6px] shadow-glass-inset hover:shadow-glass-sm;
+    @apply bg-slate-400 border-black hover:shadow-glass-sm border-solid backdrop-blur-[6px] hover:bg-stone-500 hover:shadow-white shadow-glass-inset ;
   }
 }
 
